--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="TextUtils"
-      content="is a utility which can be used to manipulate our text in the way you want."
+      name="TextUtil"
+      content="TextUtil is a word counter and character counting utility which can be used to manipulate our text in the way you want. You can remove extra spaces, copy the manipulated text as well as convert your text from Uppercase to Lowercase and Lowercase ro Uppercase."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
 
@@ -20,7 +20,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"/>
 
-    <title>TextUtils Home</title>
+    <title>TextUtils- Word couner | Character counter |Uppercase to Lowercase | Lowercase ro Uppercase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
